# ThinMedia

./: .gitattributes  README.md
ThinMedia/: api.py  app.py  home.py  hp.py  requirements.txt  soc.py  users.py
ThinMedia/data/: indexer_config.json
ThinMedia/index/: base.py  indexer.py  log.py  rr.py  tmdb.py
ThinMedia/static/: home.css  home.js  main.css  media.css
ThinMedia/templates/: index.html  index_media.html  index_media_awc.html  media.html  media_data.html  media_edit.html  media_files.html  settings.html  sign.html  top_bar.html  unique_genres.html
gui-desktop-player-cpp/: CMakeLists.txt  backend.cpp  listen.cpp  main.cpp  mpv.cpp  player.cpp  player.h  themes.cpp
no-gui-desktop-player-python/: player.py  requirements.txt
